--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,73 +1,167 @@
 body {
   color: darkblue;
   margin: 0;
-  box-sizing: border-box;
   font-size: 1.5rem;
-}
+  font-family: 'Cormorant Garamond'; }
 
 h1 {
   margin: 0;
-  color: white;
-  width: 20%;
   display: inline-block;
+  color: white;
+  width: 60%;
   padding-left: 40px;
-  font-size: 1.8rem;
-}
+  font-size: 2.4rem; }
 
 nav {
   background-color: darkgreen;
   height: 80px;
   display: flex;
   align-items: center;
-}
-
-nav ul {
-  margin: 0;
-  padding: 25px 0;
-  list-style-type: none;
-  text-align: right;
-  display: inline-block;
-  width: 75%;
-}
-
-nav ul li {
-  display: inline-block;
-  padding: 0 10px;
-}
-
-nav ul li a {
-  color: white;
-  text-decoration: none;
-  font-size: 1.5rem;
-}
+  position: fixed;
+  top: 0;
+  width: 100%; }
+  nav ul {
+    margin: 0;
+    display: inline-block;
+    padding: 25px 0;
+    list-style-type: none;
+    text-align: right;
+    width: 75%; }
+    nav ul li {
+      display: inline-block;
+      padding: 0 10px; }
+      nav ul li a {
+        color: white;
+        text-decoration: none; }
 
 main {
   width: 90%;
-  margin: 0 auto;
-  height: 78vh;
+  margin: 150px auto;
   display: flex;
   justify-content: center;
-  align-items: center;
-}
+  align-items: center; }
+
+main.projects {
+  margin-top: 0;
+  margin-bottom: 150px; }
+
+div.grid {
+  width: 100%; }
 
 div {
-  margin: 0 4%;
+  margin: 0;
   display: inline-block;
   text-align: justify;
-}
+  width: 45%; }
+
+div.info {
+  margin: 0 8% 0 0; }
+
+div.flex-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  font-size: 1.2rem; }
+  div.flex-container img {
+    margin: 0 10%;
+    border: none; }
+  div.flex-container img.tic-tac-toe {
+    border: none;
+    border-top: 10px solid #e63946;
+    border-bottom: 10px solid #e63946; }
+  div.flex-container img.planner {
+    border: 2px solid grey; }
 
 h2 {
-  margin: 0;
-}
+  font-size: 3rem;
+  margin: 0; }
+
+h2.main-heading {
+  width: 100%;
+  text-align: center;
+  padding-top: 100px; }
+
+section {
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+  section p {
+    width: 90%;
+    margin: 5% auto; }
+
+h3 {
+  text-align: center;
+  font-size: 2.2rem; }
 
 img {
-  width: 500px;
-  border: 10px solid darkblue;
-}
+  width: 90%;
+  border: 10px solid darkblue; }
 
 footer {
   background-color: darkgreen;
+  width: 100%;
   color: white;
   text-align: center;
   padding: 10px;
-}
+  position: fixed;
+  bottom: 0; }
+
+@media (max-width: 1170px) {
+  div.info {
+    font-size: 1.4rem; }
+    div.info h2 {
+      font-size: 2.7rem; }
+
+  main img {
+    width: 100%; }
+
+  div.flex-container img {
+    width: 90%; } }
+@media (max-width: 1100px) {
+  div.info {
+    font-size: 1.3rem; }
+    div.info h2 {
+      font-size: 2.4rem; } }
+@media (max-width: 860px) {
+  main {
+    flex-direction: column;
+    align-items: center; }
+    main h2 {
+      font-size: 2.1rem; }
+    main div {
+      width: 80%;
+      font-size: 1.5rem; }
+    main div.info {
+      margin: 0; }
+    main div.flex-container {
+      display: block; }
+      main div.flex-container section {
+        width: 100%; } }
+@media (max-width: 690px) {
+  nav {
+    flex-direction: column;
+    height: 200px;
+    justify-content: flex-start; }
+    nav ul {
+      width: 100%; }
+      nav ul li {
+        width: 93%;
+        text-align: justify;
+        font-size: 2rem; }
+
+  h1 {
+    font-size: 2.2rem;
+    text-align: justify;
+    width: 95%; }
+
+  h2.main-heading {
+    padding-top: 220px; }
+
+  main {
+    width: 100%;
+    margin: 220px auto; } }
+@media (max-width: 486px) {
+  footer p {
+    font-size: 1rem; } }
+
+/*# sourceMappingURL=styles.css.map */
