--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -1,6 +1,7 @@
-$primary-font-color: darkblue;
-$secondary-font-color: white;
-$background-color: darkgreen;
+$primary-font-color: #0b3173;
+$secondary-font-color: #eaebed;
+$background-color: #014421;
+$hover-background: #38b649;
 
 @mixin position() {
   margin: 0;
@@ -16,10 +17,12 @@ body {
 
 h1 {
   @include position();
-  color: white;
-  width: 60%;
+  color: $secondary-font-color;
+  width: 46%;
   padding-left: 40px;
-  font-size: 2.4rem;
+  padding-bottom: 12px;
+  font-size: 2.5rem;
+  text-shadow: 1px 1px 2px black;
 }
 
 nav {
@@ -33,19 +36,36 @@ nav {
 
   ul {
     @include position();
-    padding: 25px 0;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
     list-style-type: none;
     text-align: right;
-    width: 75%;
+    width: 100%;
+    height: 100%;
 
     li {
-      display: inline-block;
-      padding: 0 10px;
+      display: flex;
+      justify-content: center;
+      width: 100%;
+      height: 100%;
+      text-align: center;
 
       a {
-        color: white;
+        color: $secondary-font-color;
+        font-weight: 800;
         text-decoration: none;
+        text-shadow: 1px 1px 2px black;
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 25px 30px;
       }
+
+    }
+
+    li:hover {
+      background-color: $hover-background;
     }
   }
 }
@@ -139,6 +159,7 @@ footer {
   padding: 10px;
   position: fixed;
   bottom: 0;
+  text-shadow: 1px 1px 2px black;
 }
 
 @media (max-width: 1170px) {
@@ -160,6 +181,16 @@ footer {
 }
 
 @media (max-width: 1100px) {
+  h1 {
+    font-size: 1.5rem;
+    width: 50%;
+  }
+
+  nav ul li a {
+    font-size: 1.2rem;
+    padding: 25px 0;
+  }
+
   div.info {
     font-size: 1.3rem;
 
@@ -198,20 +229,36 @@ footer {
 }
 
 @media (max-width: 690px) {
+
   nav {
-    flex-direction: column;
+    display: block;
     height: 200px;
-    justify-content: flex-start;
+    align-items: center;
+    padding: 0;
 
     ul {
-      width: 100%;
+      padding: 0;
+      display: block;
+      height: 40px;
+    }
 
       li {
-        width: 93%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        padding-left: 40px;
+        padding-top: 10px;
         text-align: justify;
         font-size: 2rem;
+
+        a {
+          height: 40px;
+          width: 95%;
+          text-align: justify;
+          font-size: 2rem;
+        }
       }
-    }
   }
 
   h1 {
