--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -127,7 +127,7 @@ h2 {
 h2.main-heading {
   width: 100%;
   text-align: center;
-  padding-top: 100px;
+  padding-top: 120px;
 }
 
 section {
@@ -149,6 +149,11 @@ h3 {
 img {
   width: 90%;
   border: 10px solid $primary-font-color;
+}
+
+a {
+  text-decoration: none;
+  color: $background-color;
 }
 
 footer {
