--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,17 +1,20 @@
 body {
   color: #0b3173;
   margin: 0;
-  font-size: 1.5rem;
+  font-size: 18px;
   font-family: 'Cormorant Garamond'; }
 
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+  body {
+    font-size: 22px; } }
 h1 {
   margin: 0;
   display: inline-block;
   color: #eaebed;
-  width: 46%;
+  width: 60%;
   padding-left: 40px;
   padding-bottom: 12px;
-  font-size: 2.5rem;
+  font-size: 2em;
   text-shadow: 1px 1px 2px black; }
 
 nav {
@@ -77,7 +80,7 @@ div.flex-container {
   width: 100%;
   display: flex;
   justify-content: center;
-  font-size: 1.2rem; }
+  font-size: 0.9em; }
   div.flex-container img {
     margin: 0 10%;
     border: none; }
@@ -89,7 +92,7 @@ div.flex-container {
     border: 2px solid grey; }
 
 h2 {
-  font-size: 3rem;
+  font-size: 2.5em;
   margin: 0; }
 
 h2.main-heading {
@@ -107,7 +110,7 @@ section {
 
 h3 {
   text-align: center;
-  font-size: 2.2rem; }
+  font-size: 2em; }
 
 img {
   width: 90%;
@@ -128,10 +131,18 @@ footer {
   text-shadow: 1px 1px 2px black; }
 
 @media (max-width: 1170px) {
+  h1 {
+    font-size: 1.5em;
+    width: 50%; }
+
+  nav ul li a {
+    font-size: 1em;
+    padding: 25px 0; }
+
   div.info {
-    font-size: 1.4rem; }
+    font-size: 0.9em; }
     div.info h2 {
-      font-size: 2.7rem; }
+      font-size: 2.2em; }
 
   main img {
     width: 100%; }
@@ -140,26 +151,29 @@ footer {
     width: 90%; } }
 @media (max-width: 1100px) {
   h1 {
-    font-size: 1.5rem;
+    font-size: 1.4em;
     width: 50%; }
 
   nav ul li a {
-    font-size: 1.2rem;
+    font-size: 0.9em;
     padding: 25px 0; }
 
   div.info {
-    font-size: 1.3rem; }
+    font-size: 0.7em; }
     div.info h2 {
-      font-size: 2.4rem; } }
+      font-size: 1.7em; } }
 @media (max-width: 860px) {
+  h1 {
+    font-size: 1.1em; }
+
   main {
     flex-direction: column;
     align-items: center; }
     main h2 {
-      font-size: 2.1rem; }
+      font-size: 1.3em; }
     main div {
       width: 80%;
-      font-size: 1.5rem; }
+      font-size: 0.9em; }
     main div.info {
       margin: 0; }
     main div.flex-container {
@@ -183,16 +197,15 @@ footer {
       width: 100%;
       padding-left: 40px;
       padding-top: 10px;
-      text-align: justify;
-      font-size: 2rem; }
+      text-align: justify; }
       nav li a {
         height: 40px;
         width: 95%;
         text-align: justify;
-        font-size: 2rem; }
+        font-size: 1.2em; }
 
   h1 {
-    font-size: 2.2rem;
+    font-size: 1.5em;
     text-align: justify;
     width: 95%; }
 
@@ -204,6 +217,6 @@ footer {
     margin: 220px auto; } }
 @media (max-width: 486px) {
   footer p {
-    font-size: 1rem; } }
+    font-size: 0.8em; } }
 
 /*# sourceMappingURL=styles.css.map */
