--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -47,11 +47,14 @@ nav {
         text-decoration: none;
         text-shadow: 1px 1px 2px black;
         width: 100%;
-        height: 100%;
         margin: 0;
         padding: 25px 30px; }
     nav ul li:hover {
       background-color: #38b649; }
+    nav ul li.selected {
+      background-color: #0b3173; }
+      nav ul li.selected a {
+        cursor: default; }
 
 main {
   width: 90%;
@@ -186,7 +189,7 @@ footer {
       display: block; }
       main div.flex-container section {
         width: 100%; } }
-@media (max-width: 690px) {
+@media (max-width: 690px), (max-device-width: 480px) {
   nav {
     display: block;
     height: 200px;
@@ -221,7 +224,7 @@ footer {
   main {
     width: 100%;
     margin: 220px auto; } }
-@media (max-width: 486px) {
+@media (max-width: 486px), (max-device-width: 480px) {
   footer p {
     font-size: 0.8em; } }
 
