--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -63,7 +63,6 @@ nav {
         text-decoration: none;
         text-shadow: 1px 1px 2px black;
         width: 100%;
-        height: 100%;
         margin: 0;
         padding: 25px 30px;
       }
@@ -72,6 +71,14 @@ nav {
 
     li:hover {
       background-color: $hover-background;
+    }
+
+    li.selected {
+      background-color: $primary-font-color;
+
+      a {
+        cursor: default;
+      }
     }
   }
 }
@@ -183,7 +190,7 @@ footer {
   text-shadow: 1px 1px 2px black;
 }
 
-@media (max-width: 1170px) {
+@media only screen and (max-width: 1170px) {
   h1 {
     font-size: 1.5em;
     width: 50%;
@@ -211,7 +218,7 @@ footer {
   }
 }
 
-@media (max-width: 1100px) {
+@media only screen and (max-width: 1100px) {
   h1 {
     font-size: 1.4em;
     width: 50%;
@@ -231,7 +238,7 @@ footer {
   }
 }
 
-@media (max-width: 860px) {
+@media only screen and (max-width: 860px) {
   h1 {
     font-size: 1.1em;
   }
@@ -263,7 +270,7 @@ footer {
   }
 }
 
-@media (max-width: 690px) {
+@media only screen and (max-width: 690px), (max-device-width: 480px) {
 
   nav {
     display: block;
@@ -312,7 +319,7 @@ footer {
 
 }
 
-@media (max-width: 486px) {
+@media only screen and (max-width: 486px) {
   footer p {
     font-size: 0.8em;
   }
