--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -139,10 +139,11 @@ footer {
   bottom: 0;
   text-shadow: 1px 1px 2px black; }
 
-@media (max-width: 1170px) {
+@media only screen and (max-width: 1170px) {
   h1 {
     font-size: 1.5em;
-    width: 50%; }
+    width: 50%;
+    color: purple; }
 
   nav ul li a {
     font-size: 1em;
@@ -158,10 +159,11 @@ footer {
 
   div.flex-container img {
     width: 90%; } }
-@media (max-width: 1100px) {
+@media only screen and (max-width: 1100px) {
   h1 {
     font-size: 1.4em;
-    width: 50%; }
+    width: 50%;
+    color: yellow; }
 
   nav ul li a {
     font-size: 0.9em;
@@ -171,9 +173,10 @@ footer {
     font-size: 0.7em; }
     div.info h2 {
       font-size: 1.7em; } }
-@media (max-width: 860px) {
+@media only screen and (max-width: 860px) {
   h1 {
-    font-size: 1.1em; }
+    font-size: 1.1em;
+    color: orange; }
 
   main {
     flex-direction: column;
@@ -189,7 +192,10 @@ footer {
       display: block; }
       main div.flex-container section {
         width: 100%; } }
-@media (max-width: 690px), (max-device-width: 480px) {
+@media only screen and (max-width: 690px), (max-device-width: 480px) {
+  h1 {
+    color: blue; }
+
   nav {
     display: block;
     height: 200px;
@@ -224,7 +230,7 @@ footer {
   main {
     width: 100%;
     margin: 220px auto; } }
-@media (max-width: 486px), (max-device-width: 480px) {
+@media only screen and (max-width: 486px) {
   footer p {
     font-size: 0.8em; } }
 
