--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -194,6 +194,7 @@ footer {
   h1 {
     font-size: 1.5em;
     width: 50%;
+    color: purple;
   }
 
   nav ul li a {
@@ -222,6 +223,7 @@ footer {
   h1 {
     font-size: 1.4em;
     width: 50%;
+    color: yellow;
   }
 
   nav ul li a {
@@ -241,6 +243,7 @@ footer {
 @media only screen and (max-width: 860px) {
   h1 {
     font-size: 1.1em;
+    color: orange;
   }
 
   main {
@@ -271,6 +274,9 @@ footer {
 }
 
 @media only screen and (max-width: 690px), (max-device-width: 480px) {
+  h1 {
+    color: blue;
+  }
 
   nav {
     display: block;
@@ -320,7 +326,6 @@ footer {
 }
 
 @media only screen and (max-width: 486px) {
-  color: red;
 
   footer p {
     font-size: 0.8em;
