--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -194,7 +194,7 @@ footer {
         width: 100%; } }
 @media only screen and (max-width: 690px), (max-device-width: 480px) {
   h1 {
-    color: blue; }
+    color: red; }
 
   nav {
     display: block;
@@ -229,7 +229,11 @@ footer {
 
   main {
     width: 100%;
-    margin: 220px auto; } }
+    margin: 220px auto;
+    flex-direction: column;
+    align-items: center; }
+    main div {
+      width: 100%; } }
 @media only screen and (max-width: 486px) {
   footer p {
     font-size: 0.8em; } }
