--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -275,7 +275,7 @@ footer {
 
 @media only screen and (max-width: 690px), (max-device-width: 480px) {
   h1 {
-    color: blue;
+    color: red;
   }
 
   nav {
@@ -323,6 +323,10 @@ footer {
     margin: 220px auto;
     flex-direction: column;
     align-items: center;
+
+    div {
+      width: 100%;
+    }
   }
 
 }
