--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -297,13 +297,13 @@ footer {
           height: 40px;
           width: 95%;
           text-align: justify;
-          font-size: 1.2em;
+          font-size: 1.5em;
         }
       }
   }
 
   h1 {
-    font-size: 1.5em;
+    font-size: 2em;
     text-align: justify;
     width: 95%;
     color: purple;
@@ -316,13 +316,13 @@ footer {
   main {
     width: 90%;
     margin: 220px auto;
-    padding: 0 20px;
+    padding: 0 20px 0 0;
     flex-direction: column;
     align-items: center;
 
     div {
       width: 100%;
-      font-size: 1em;
+      font-size: 1.2em;
     }
   }
 
