--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -217,7 +217,7 @@ footer {
     font-size: 1.6em;
     text-align: justify;
     width: 95%;
-    color: purple; }
+    color: red; }
 
   h2.main-heading {
     padding-top: 220px; }
