--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -306,7 +306,7 @@ footer {
     font-size: 1.6em;
     text-align: justify;
     width: 95%;
-    color: purple;
+    color: red;
   }
 
   h2.main-heading {
