--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -26,7 +26,7 @@ h1 {
   width: 60%;
   padding-left: 40px;
   padding-bottom: 12px;
-  font-size: 2em;
+  font-size: 1.8em;
   text-shadow: 1px 1px 2px black;
 }
 
@@ -63,7 +63,8 @@ nav {
         text-shadow: 1px 1px 2px black;
         width: 100%;
         margin: 0;
-        padding: 25px 30px;
+        padding: 22px 15px;
+        font-size: 1.2em;
       }
 
     }
@@ -162,6 +163,7 @@ section {
   p.planner {
     margin: 20px 0 25px 10%;
   }
+    font-size: 1.4
 }
 
 h3 {
@@ -192,7 +194,7 @@ footer {
 
 @media only screen and (max-width: 1170px) {
   h1 {
-    font-size: 1.5em;
+    font-size: 1.4em;
     width: 50%;
   }
 
@@ -202,7 +204,7 @@ footer {
   }
 
   div.info {
-    font-size: 0.9em;
+    font-size: 1.2em;
 
     h2 {
       font-size: 2.2em;
@@ -220,17 +222,17 @@ footer {
 
 @media only screen and (max-width: 1100px) {
   h1 {
-    font-size: 1.4em;
+    font-size: 1.1em;
     width: 50%;
   }
 
   nav ul li a {
-    font-size: 0.9em;
+    font-size: 0.8em;
     padding: 25px 0;
   }
 
   div.info {
-    font-size: 0.7em;
+    font-size: 1.2em;
 
     h2 {
       font-size: 1.7em;
@@ -240,7 +242,7 @@ footer {
 
 @media only screen and (max-width: 860px) {
   h1 {
-    font-size: 1.1em;
+    font-size: 1em;
   }
 
   main {
@@ -297,7 +299,7 @@ footer {
           height: 40px;
           width: 95%;
           text-align: justify;
-          font-size: 1.5em;
+          font-size: 1.4em;
         }
       }
   }
