--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -299,7 +299,7 @@ footer {
           height: 40px;
           width: 95%;
           text-align: justify;
-          font-size: 1.4em;
+          font-size: 20px;
         }
       }
   }
@@ -308,7 +308,7 @@ footer {
     font-size: 1.6em;
     text-align: justify;
     width: 95%;
-    color: red;
+    color: pink;
   }
 
   h2.main-heading {
@@ -324,7 +324,7 @@ footer {
 
     div.info {
       width: 100%;
-      font-size: 0.9em;
+      font-size: 30px;
     }
   }
 
