--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,11 +1,15 @@
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+  html {
+    font-size: 20px; } }
+@-moz-document url-prefix() {
+  html {
+    color: lime;
+    font-size: 18px; } }
 body {
   color: #0b3173;
   margin: 0;
   font-family: 'Cormorant Garamond'; }
 
-@media screen and (-webkit-min-device-pixel-ratio: 0) {
-  body {
-    font-size: 22px; } }
 h1 {
   margin: 0;
   display: inline-block;
@@ -13,7 +17,7 @@ h1 {
   width: 60%;
   padding-left: 40px;
   padding-bottom: 12px;
-  font-size: 1.8em;
+  font-size: 2rem;
   text-shadow: 1px 1px 2px black; }
 
 nav {
@@ -48,7 +52,7 @@ nav {
         width: 100%;
         margin: 0;
         padding: 22px 15px;
-        font-size: 1.2em; }
+        font-size: 1.2rem; }
     nav ul li:hover {
       background-color: #38b649; }
     nav ul li.selected {
@@ -78,13 +82,14 @@ div {
   width: 45%; }
 
 div.info {
+  font-size: 1.1rem;
   margin: 0 8% 0 0; }
 
 div.flex-container {
   width: 100%;
   display: flex;
   justify-content: center;
-  font-size: 0.9em; }
+  font-size: 1rem; }
   div.flex-container img {
     margin: 0 10%;
     border: none; }
@@ -96,7 +101,7 @@ div.flex-container {
     border: 1px solid grey; }
 
 h2 {
-  font-size: 2.5em;
+  font-size: 2.5rem;
   margin: 0; }
 
 h2.main-heading {
@@ -143,7 +148,7 @@ footer {
 
 @media only screen and (max-width: 1170px) {
   h1 {
-    font-size: 1.4em;
+    font-size: 1.4rem;
     width: 50%; }
 
   nav ul li a {
@@ -151,7 +156,7 @@ footer {
     padding: 25px 0; }
 
   div.info {
-    font-size: 1.2em; }
+    font-size: 1rem; }
     div.info h2 {
       font-size: 2.2em; }
 
@@ -162,21 +167,18 @@ footer {
     width: 90%; } }
 @media only screen and (max-width: 1100px) {
   h1 {
-    font-size: 1.1em;
+    font-size: 1.3rem;
     width: 50%; }
 
   nav ul li a {
-    font-size: 0.8em;
+    font-size: 1em;
     padding: 25px 0; }
 
   div.info {
-    font-size: 1.2em; }
+    font-size: 0.9rem; }
     div.info h2 {
       font-size: 1.7em; } }
 @media only screen and (max-width: 860px) {
-  h1 {
-    font-size: 1em; }
-
   main {
     flex-direction: column;
     align-items: center; }
@@ -191,7 +193,7 @@ footer {
       display: block; }
       main div.flex-container section {
         width: 100%; } }
-@media only screen and (max-width: 690px), (max-device-width: 480px) {
+@media only screen and (max-width: 780px), (max-device-width: 480px) {
   nav {
     display: block;
     height: 200px;
@@ -219,10 +221,10 @@ footer {
     font-size: 30px; }
 
   h1 {
-    font-size: 50px;
+    font-size: 2.2rem;
     text-align: justify;
     width: 95%;
-    color: lightgreen; }
+    color: darkgreen; }
 
   h2 {
     padding-top: 40px; }
