--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -223,7 +223,8 @@ footer {
   h1 {
     font-size: 2.2rem;
     text-align: justify;
-    width: 95%; }
+    width: 95%;
+    color: blue; }
 
   h2 {
     padding-top: 40px; }
