--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -224,7 +224,7 @@ footer {
     font-size: 2.2rem;
     text-align: justify;
     width: 95%;
-    color: blue; }
+    color: red; }
 
   h2 {
     padding-top: 40px; }
