--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -233,22 +233,24 @@ footer {
     width: 95%; }
 
   h2 {
-    padding-top: 40px; }
+    padding-top: 50px; }
 
   h2.main-heading {
-    padding-top: 250px; }
+    padding: 280px 0 0 30px; }
 
   main {
     width: 90%;
     margin: 220px auto;
-    padding: 0 20px 0 0;
+    padding: 10px;
     flex-direction: column;
     align-items: center; }
     main div.info {
       width: 100%;
       font-size: 20px; }
     main section {
-      font-size: 25px; }
+      width: 100%;
+      color: red;
+      padding-left: 0; }
 
   main div {
     margin-top: 30px;
