--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -329,17 +329,17 @@ footer {
   }
 
   h2 {
-    padding-top: 40px;
+    padding-top: 50px;
   }
 
   h2.main-heading {
-    padding-top: 250px;
+    padding: 280px 0 0 30px;
   }
 
   main {
     width: 90%;
     margin: 220px auto;
-    padding: 0 20px 0 0;
+    padding: 10px;
     flex-direction: column;
     align-items: center;
 
@@ -349,7 +349,9 @@ footer {
     }
 
     section {
-      font-size: 25px;
+      width: 100%;
+      color: red;
+      padding-left: 0;
     }
   }
 
