--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -244,17 +244,18 @@ footer {
     padding: 10px;
     flex-direction: column;
     align-items: center; }
+    main div {
+      margin-top: 30px;
+      width: 100%; }
     main div.info {
       width: 100%;
       font-size: 20px; }
+    main div.flex-container {
+      flex-direction: column; }
     main section {
       width: 100%;
       color: red;
       padding-left: 0; }
-
-  main div {
-    margin-top: 30px;
-    width: 100%; }
 
   footer p {
     font-size: 1.1rem; } }
