--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -355,11 +355,11 @@ footer {
 
     div.flex-container {
       flex-direction: column;
+      color: purple;
     }
 
     section {
       width: 100%;
-      color: red;
       padding-left: 0;
     }
   }
