--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -16,6 +16,7 @@ h1 {
   width: 60%;
   padding-left: 40px;
   padding-bottom: 12px;
+  padding-top: 5px;
   font-size: 2rem;
   text-shadow: 1px 1px 2px black; }
 
@@ -40,9 +41,11 @@ nav {
     nav ul li {
       display: flex;
       justify-content: center;
+      align-items: center;
       width: 100%;
       height: 100%;
-      text-align: center; }
+      text-align: center;
+      transition: background-color 0.5s; }
       nav ul li a {
         color: #eaebed;
         font-weight: 800;
@@ -62,10 +65,11 @@ nav {
 main {
   font-size: 20px;
   width: 90%;
-  margin: 150px auto;
+  margin: 100px auto;
   display: flex;
   justify-content: center;
-  align-items: center; }
+  align-items: center;
+  margin-left: 3%; }
 
 main.projects {
   margin-top: 0;
@@ -73,7 +77,7 @@ main.projects {
 
 div.grid {
   width: 100%;
-  margin: 0; }
+  margin-left: 0; }
 
 div {
   margin: 0;
@@ -83,7 +87,7 @@ div {
 
 div.info {
   font-size: 1.1rem;
-  margin: 0 8% 0 0; }
+  margin: 5%; }
 
 div.flex-container {
   width: 100%;
@@ -136,7 +140,8 @@ img {
 
 a {
   text-decoration: none;
-  color: #014421; }
+  color: #014421;
+  transition: color 0.5s; }
 
 main a:hover {
   color: #32cd32; }
@@ -187,7 +192,8 @@ footer {
 @media only screen and (max-width: 860px) {
   main {
     flex-direction: column;
-    align-items: center; }
+    align-items: center;
+    margin-left: 1%; }
     main h2 {
       font-size: 1.3em; }
     main div {
@@ -205,7 +211,7 @@ footer {
     align-items: center;
     height: 178px;
     padding: 0;
-    padding-bottom: 28px; }
+    padding-bottom: 34px; }
     nav ul {
       padding: 0;
       display: block;
@@ -225,7 +231,8 @@ footer {
         text-align: justify; }
 
   header nav ul li a {
-    font-size: 1.1rem; }
+    font-size: 1.1rem;
+    padding-top: 40px; }
 
   h1 {
     font-size: 1.3rem;
@@ -243,7 +250,8 @@ footer {
     margin: 220px auto;
     padding: 10px;
     flex-direction: column;
-    align-items: center; }
+    align-items: center;
+    margin-left: 0; }
     main div {
       margin-top: 30px;
       width: 100%; }
