--- a/assets/stylesheets/styles.scss
+++ b/assets/stylesheets/styles.scss
@@ -27,6 +27,10 @@ body {
   font-family: 'Cormorant Garamond';
 }
 
+header {
+  height: 80px;
+}
+
 h1 {
   @include position();
   color: $secondary-font-color;
@@ -94,29 +98,25 @@ nav {
 }
 
 main {
-  font-size: 20px;
-  width: 90%;
-  margin: 100px auto;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: 3%;
+  font-size: 20px;
 }
 
 main.projects {
-  margin-top: 0;
-  margin-bottom: 150px;
+  flex-direction: column;
+  margin: 0 20px;
 }
 
 div.grid {
-  width: 100%;
-  margin-left: 0;
+  display: grid;
+  grid-template: 1fr 1fr / 1fr 1fr;
 }
 
 div {
   @include position();
   text-align: justify;
-  width: 45%;
 }
 
 div.info {
@@ -124,14 +124,8 @@ div.info {
   margin: 5%;
 }
 
-div.flex-container {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  font-size: 1rem;
-
+section {
   img {
-    margin: 0 10%;
     border: none;
   }
 
@@ -147,43 +141,43 @@ div.flex-container {
 }
 
 h2 {
-  font-size: 2.5rem;
   margin: 0;
-}
-
-h2.main-heading {
   width: 100%;
+  padding: 24px 0;
   text-align: center;
-  padding-top: 120px;
+  font-size: 2.5rem;
 }
 
 section {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  padding: 24px 32px;
 
-  p {
-    width: 90%;
-    margin: 25px 0 20px 10%;
+  h3 {
+    margin: 0 0 24px;
+    text-align: center;
+    font-size: 2rem;
+  }
+
+  a {
+    display: flex;
+    justify-content: center;
+  }
+  
+  img {
+    border: 10px solid $primary-font-color;
   }
 
   p.link {
+    margin: 12px 0;
     text-align: center;
-    margin: 5px 0 5px 10%;
   }
-
-  p.planner {
-    margin: 20px 0 25px 10%;
-  }
-    font-size: 1.4
 }
 
 h3 {
-  margin-left: 10%;
-  width: 90%;
   text-align: center;
-  font-size: 2em;
+  font-size: 1.2rem;
 }
 
 img {
@@ -207,10 +201,31 @@ footer {
   width: 100%;
   color: white;
   text-align: center;
-  padding: 10px;
+  padding: 20px;
   position: fixed;
   bottom: 0;
   text-shadow: 1px 1px 2px black;
+
+  h2 {
+    margin: 0;
+    padding: 0 0 24px;
+    font-size: 1.6rem;
+  }
+
+  p {
+    display: flex;
+    justify-content: center;
+    margin: 0;
+
+    span {
+      font-size: 1rem;
+      margin: 0 20px;
+  
+      a {
+        color: white;
+      }
+    }
+  }
 }
 
 @media only screen and (max-width: 1170px) {
@@ -262,7 +277,6 @@ footer {
 }
 
 @media only screen and (max-width: 860px) {
-
   main {
     flex-direction: column;
     align-items: center;
@@ -292,7 +306,6 @@ footer {
 }
 
 @media only screen and (max-width: 780px), (max-device-width: 480px) {
-
   nav {
     display: block;
     align-items: center;
