--- a/assets/stylesheets/styles.scss
+++ b/assets/stylesheets/styles.scss
@@ -1,4 +1,5 @@
 @use "./partials/pallette";
+@use "./partials/mixins";
 @use "./modules/navbar";
 @use "./modules/summary";
 @use "./modules/footer";
@@ -18,11 +19,13 @@ body {
 }
 
 .projects {
+  @include mixins.main-styles;
   flex-direction: column;
 
   .projects__heading {
+    margin: 0 0 24px;
     text-align: center;
-    font-size: 1.2rem;
+    font-size: 2.5rem;
   }
 
   .projects__gallery {
@@ -45,6 +48,7 @@ body {
       }
 
       .project__heading {
+        margin: 0 0 24px;
         font-size: 2rem;
       }
 
@@ -66,6 +70,10 @@ body {
             height: unset;
           }
         }
+      }
+
+      .project__para {
+        @include mixins.para-styles;
       }
     }
   }
