--- a/assets/stylesheets/modules/_footer.scss
+++ b/assets/stylesheets/modules/_footer.scss
@@ -1,4 +1,5 @@
 @use "../partials/pallette";
+@use "../partials/breakpoints";
 
 .footer {
   background-color: pallette.$primary-color;
@@ -21,7 +22,7 @@
     justify-content: center;
     margin: 0;
 
-    @media only screen and (max-width: 992px) {
+    @include breakpoints.tablet {
       flex-direction: column;
     }
 
@@ -29,7 +30,7 @@
       font-size: 1rem;
       margin: 0 20px;
 
-      @media only screen and (max-width: 992px) {
+      @include breakpoints.tablet {
         margin: 8px 0;
       }
 
