--- a/assets/stylesheets/modules/_navbar.scss
+++ b/assets/stylesheets/modules/_navbar.scss
@@ -1,4 +1,5 @@
 @use "../partials/pallette";
+@use "../partials/breakpoints";
 
 .navbar {
   background-color: pallette.$primary-color;
@@ -8,7 +9,7 @@
   top: 0;
   width: 100%;
 
-  @media only screen and (max-width: 768px) {
+  @include breakpoints.phone {
     flex-direction: column;
   }
 
@@ -23,7 +24,7 @@
     font-size: 1.4rem;
     text-shadow: 1px 1px 2px black;
 
-    @media only screen and (max-width: 768px) {
+    @include breakpoints.phone {
       padding: 12px 0;
     }
   }
@@ -34,7 +35,7 @@
     flex-grow: 1;
     margin: 0;
 
-    @media only screen and (max-width: 768px) {
+    @include breakpoints.phone {
       flex-direction: column;
       width: 100%;
       padding: 0;
