--- a/assets/stylesheets/modules/_summary.scss
+++ b/assets/stylesheets/modules/_summary.scss
@@ -11,7 +11,7 @@
     width: 600px;
 
     .summary__heading {
-      margin: 0;
+      margin: 0 0 12px;
       text-align: center;
       font-size: 2.5rem;
     }
@@ -22,7 +22,7 @@
   }
 
   .summary__image {
-    margin-left: 48px;
+    margin-left: 36px;
     height: 400px;
     border: 10px solid pallette.$secondary-color;
 
