--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -15,11 +15,12 @@
   display: flex;
   align-items: center;
   flex-grow: 1;
-  margin: 0;
-  color: #eaebed;
   height: 48px;
+  margin: 0;
   padding-left: 32px;
+  color: #eaebed;
   font-size: 1.4rem;
+  text-align: center;
   text-shadow: 1px 1px 2px black;
 }
 @media only screen and (max-width: 768px) {
@@ -29,6 +30,7 @@
 }
 .navbar .navbar__buttons {
   display: flex;
+  justify-content: flex-end;
   list-style-type: none;
   flex-grow: 1;
   margin: 0;
@@ -41,8 +43,18 @@
   }
 }
 .navbar .navbar__buttons .navbar__button {
-  flex-grow: 1;
+  width: 200px;
   transition: background-color 0.5s;
+}
+@media only screen and (max-width: 992px) {
+  .navbar .navbar__buttons .navbar__button {
+    width: 136px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .navbar .navbar__buttons .navbar__button {
+    width: 100%;
+  }
 }
 .navbar .navbar__buttons .navbar__button--selected {
   background-color: #0b3173;
@@ -87,11 +99,12 @@
   width: 600px;
 }
 .summary .summary__section .summary__heading {
-  margin: 0;
+  margin: 0 0 12px;
   text-align: center;
   font-size: 2.5rem;
 }
 .summary .summary__section .summary__para {
+  margin: 8px 0;
   text-align: justify;
 }
 .summary .summary__section .summary__para--link-container {
@@ -107,7 +120,7 @@
   color: #38b649;
 }
 .summary .summary__image {
-  margin-left: 48px;
+  margin-left: 36px;
   height: 400px;
   border: 10px solid #0b3173;
 }
@@ -189,6 +202,7 @@
   }
 }
 .projects .projects__gallery .projects__project .project__para {
+  margin: 8px 0;
   text-align: justify;
 }
 .projects .projects__gallery .projects__project .project__para--link-container {
@@ -217,7 +231,7 @@
 .footer .footer__heading {
   margin: 0;
   padding: 0 0 16px;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
 }
 .footer .footer__details {
   display: flex;
