--- a/assets/stylesheets/modules/_summary.scss
+++ b/assets/stylesheets/modules/_summary.scss
@@ -5,19 +5,37 @@
 .summary {
   @include shared-styles.main-styles;
 
-  .summary__section {
+  .summary__container {
     display: flex;
     flex-direction: column;
     width: 600px;
 
-    .summary__heading {
-      margin: 0 0 12px;
-      text-align: center;
-      font-size: 2.5rem;
-    }
+    .summary__section {
+      padding: 0 0 32px;
 
-    .summary__para {
-      @include shared-styles.para-styles;
+      .summary__heading {
+        margin: 0 0 16px;
+        text-align: center;
+        font-size: 2.5rem;
+        line-height: 1;
+      }
+
+      .summary__para {
+        @include shared-styles.para-styles;
+      }
+
+      .summary__list {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+
+        .summary__item {
+          padding: 4px 8px;
+        }
+      }
     }
   }
 
@@ -27,7 +45,7 @@
     border: 10px solid pallette.$secondary-color;
 
     @include breakpoints.small-desktop {
-      height: 300px;
+      height: 280px;
     }
 
     @include breakpoints.tablet {
