--- a/assets/stylesheets/modules/_projects.scss
+++ b/assets/stylesheets/modules/_projects.scss
@@ -6,9 +6,7 @@
   flex-direction: column;
 
   .projects__heading {
-    margin: 0 0 24px;
-    text-align: center;
-    font-size: 2.5rem;
+    @include shared-styles.heading-styles(24px);
   }
 
   .projects__gallery {
