--- a/assets/stylesheets/partials/_shared-styles.scss
+++ b/assets/stylesheets/partials/_shared-styles.scss
@@ -15,6 +15,13 @@
   }
 }
 
+@mixin heading-styles($margin-bottom: 16px) {
+  margin: 0 0 $margin-bottom;
+  text-align: center;
+  font-size: 2.5rem;
+  line-height: 1;
+}
+
 @mixin para-styles {
   margin: 8px 0;
   text-align: justify;
@@ -24,7 +31,8 @@
     text-align: center;
   }
 
-  a {
+  .summary__link,
+  .project__link {
     text-decoration: none;
     color: pallette.$primary-color;
     transition: color 0.5s;
